Object of invisible layer is displayed by a view. #44350

Closed
opened 2015-04-11 08:46:58 +02:00 by perfection cat · 7 comments

System Information
windows XP/SP3 32bits

Blender Version
Broken: version 2.74 (sub 4), branch b'master', commit date b'2015-04-10' b'18:20', hash b'465a5d2', b'Release'
Worked: unknown

Short description of error
Object of invisible layer is displayed by a view.
Exact steps for others to reproduce the error
Object of invisible layer is displayed by a view.

Reproduction method:
1.Open the file which I attached.
2.Click data of OtherSceneCurve in outliner.
3.Move handle of displayed OtherSceneCurve.
4.Click object of BezierCurve in outliner.
5.Confirm that curve is updated automatically.
6.Push Ctrl+Z twice.
CurveBevelObject1.png
CurveBevelObject2.png
CurveBevelObject.blend

**System Information** windows XP/SP3 32bits **Blender Version** Broken: version 2.74 (sub 4), branch b'master', commit date b'2015-04-10' b'18:20', hash b'465a5d2', b'Release' Worked: unknown **Short description of error** Object of invisible layer is displayed by a view. **Exact steps for others to reproduce the error** Object of invisible layer is displayed by a view. Reproduction method: 1.Open the file which I attached. 2.Click data of OtherSceneCurve in outliner. 3.Move handle of displayed OtherSceneCurve. 4.Click object of BezierCurve in outliner. 5.Confirm that curve is updated automatically. 6.Push Ctrl+Z twice. ![CurveBevelObject1.png](https://archive.blender.org/developer/F160867/CurveBevelObject1.png) ![CurveBevelObject2.png](https://archive.blender.org/developer/F160869/CurveBevelObject2.png) [CurveBevelObject.blend](https://archive.blender.org/developer/F160871/CurveBevelObject.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961

This issue was referenced by 17a9b05b9d

This issue was referenced by 17a9b05b9d2ec986223159b7ec92cddd236690a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 17a9b05b9d.

Closed by commit 17a9b05b9d.
Author

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author

@ideasman42:
I confirmed that it was improved in blender-2.74-c448196-win32.zip.
I thank you.

@ideasman42: I confirmed that it was improved in blender-2.74-c448196-win32.zip. I thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44350
No description provided.