Fix T44350: View3D layer out of sync /w scene